Fixed header align

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,8 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: end;
+    align-items: center;
+    height: 48px;
 }
 
 .main {
